[tool.poetry]
name = "compellent_collector"
version = "0.1.0"
description = "Program to collect metrics from Dell Compellent Storage API"
authors = ["Jardel F. F. de Araujo <jardel.araujo@redeunifique.com.br>"]
license = "GPL-3.0 License"

[tool.poetry.dependencies]
python = "!=3.3.*"
argparse = "1.4.0"
elasticsearch = "7.12.1"
pandas = "1.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
unifique-compellent-collector = 'compellent_collector.compellent_collector:main'